[package]
name = "stm32h7b3i-dk-demo"
version = "0.1.0"
edition = "2021"

[dependencies]

# For embassy it is usually recommended to use one of the latest git commits instead of the version published on crates.io
# See e.g. https://embassy.dev/book/#_cargo_toml_2 for how it works with [patch.crates-io]
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "time-driver-any",
    "stm32h7b3li",
    "memory-x",
    "exti",
] }
embassy-executor = { version = "0.6.2", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = "0.3.2"
